syntax = "proto3";

package NothingRpcApi;

option csharp_namespace = "NothingServices.WPFApp.Dtos";

// Данные для создания модели
message CreateNothingModelDto
{
  // Имя модели
  string Name = 1;
}